--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <ul id="main-list"></ul>
     <script src="./main.js"></script>
 </body>
 </html>
