feat: bonus 2 fine esercizio

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- google font -->
     <title>FizzBuzz</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <ul id="main-list"></ul>
-    
+    <!-- main -->
+    <h1 class="color-withe"><strong>FizzBuzzDom</strong></h1>
+    <main id="main" class="flex">
+     
+    </main>
+    <!-- main -->
     <script src="./main.js"></script>
 </body>
 </html>
